my first challenge

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <h4>76</h4>
           <p>of 100</p>
            </div>
-             <h5 class="big">Great</h5>
+             <h5 class="big
+             ">Great</h5>
              <p class="small">You scored higher than 65% of the <br>
                people who have taken these tests</p>
          </div>
