--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
  <section id="firstpart">
         <div class="first">
-         <h4>Your Result</h4>
+         <h4 class="Result">Your Result</h4>
          <div class="circle">
             <h4>76</h4>
           <p>of 100</p>
            </div>
              <h5 class="big
              ">Great</h5>
-             <p class="small">You scored higher than 65% of the <br>
-               people who have taken these tests</p>
+             <p class="small">You scored higher than 65% of <br>the 
+               people who have taken <br>these tests</p>
          </div>
 </section>
 
